v2.0:
  * Qopen is now Python3-only, if you need support for Python2 use the 1.x releases
  * remove parallel option, set njobs to 1 for sequential processing
v1.6:
  * rename omM to sds (sorce displacment spectrum)
  * site: add option to ignore some stations when aligning site responses
  * allow to pin site response of a set of stations (previously only a single station or all stations)
  * minor bugfixes
v1.5:
  * core: report fit error for source displacement spectra
  * core: collect_results returns dict instead of list
  * imaging: labels for plots of source displacement spectra
  * site: align sites now correctly alignes around the given response, before it was shifted by a small value
  * site: recalculate mean site amplifications after alignment
  * site: greatly enhance test suite
  * fixed some minor bugs
  * other small enhancements
v1.4:
  * move some functions from core to new source and site modules
  * API documentation now available on readthedocs
  * bugfix: fix plotting of source model and seismic moment in sds plots
  * core: if picks are used, S picks are compulsory and P picks are optional now
  * core: fix some more ObsPy depreciation warnings
v1.3:
  * fix ObsPy depreciation warnings
  * remove support for ObsPy<1.0
v1.2:
  * bugfix: observed energy now correctly calculated with a factor of 1/2 instead of 1/4
  * core: rename "correct sensitivities" to "align sites"
  * core: "align sites" now only computes on largest contiguous area
  * core: move free surface correction term from qopen.rt module to the calculation of observed energy
  * core: free surface correction is configurable
  * core: new command line option "--calc-source-params" for re-calculating source parameters
  * core: use source model of Abercrombie 2015 to fit source displacement spectra and allow to invert for M0, fc, n, and gamma
  * core: add possibility to filter Inventory with Inventory.select
  * core: other new, not very important, but useful command line options