@@ -1,3 +1,5 @@
+dev:
+  * fix: use matplotlib agg backend by default to circumvent problems with parallel plotting on MacOS
 v2.0:
   * Qopen is now Python3-only, if you need support for Python2 use the 1.x releases
   * remove parallel option, set njobs to 1 for sequential processing
